--- a/configurations.ini
+++ b/configurations.ini
@@ -2,7 +2,7 @@
 request_freq = 10000
 logging = True
 windows_notifications = True
-app_style = Aqua
+app_style = Forbidden
 phemex_auth_token = 
 
 [EMAIL_NOTIFICATIONS_SETTINGS]
